﻿----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2006-01-17 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/database_interface.lib.php:
      fixed bug: undefined index with empty database in db structure view

2006-01-16 Marc Delisle  <lem9@users.sourceforge.net>
    * server_privileges.php: typo
    * libraries/check_user_privileges.lib.php: bug #1406499,
      a username containing an hyphen could not create a db under
      MySQL 4.0.x, thanks to "timeout-"
    * libraries/common.lib.php: bug #1405956, uninitialized variable $link,
      thanks to Sebastian Mendel

2006-01-14 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/sql_query_form.lib.php: undefined js variable
    * libraries/database_interface.lib.php: PMA_DBI_get_tables_full() first parameter
      now also accepts an array of database names not only a single name
    * libraries/common.lib.php: PMA_getTableList():
      added second parameter to pass tables (if already fetched from db)
    * left.php: make use of new functionality in PMA_getTableList() and
      PMA_DBI_get_tables_full(): reduce db server traffic (MySQL >=5.0)
    * libraries/common.lib.php:
      removed aditional check for table row count for left frame tree
      (bug #1397061 Left frame not loaded correct on MySQL error)
    * libraries/common.lib.php, left.php:
      bug #1392924 undefined index: tab_count
    * libraries/display_export.lib.php, css/phpmyadmin.css.php,
      themes/*/css/theme_right.css.php:
      'fixed' layout of export screen for buggy safari and opera
    * db_operations.php, export.php, index.php, left.php,
      libraries\auth\cookie.auth.lib.php, libraries\common.lib.php,
      libraries\db_details_common.inc.php, libraries\db_table_exists.lib.php,
      libraries\display_export.lib.php, libraries\display_tbl.lib.php,
      libraries\export\sql.php, libraries\footer.inc.php,